--- a/style.css
+++ b/style.css
@@ -118,20 +118,21 @@ h1 {
   margin-bottom: 2rem;
 }
 
+/* * MEDIA QUERY */
 @media (max-width: 44em) {
   html {
     font-size: 36.5%;
     box-sizing: border-box;
   }
   main {
-    height: 35vh;
+    height: 40vh;
     color: #eee;
     display: flex;
     align-items: center;
     justify-content: space-around;
   }
   h1 {
-    font-size: 3.6rem;
+    font-size: 3rem;
     text-align: center;
     position: absolute;
     width: 100%;
@@ -140,5 +141,14 @@ h1 {
     background: #eee;
     color: #333;
     font-size: 10rem;
+  }
+
+  btn {
+    position: absolute;
+  }
+  .guess {
+    border: 2px solid #eee;
+    width: 16rem;
+    font-size: 2rem;
   }
 }
